--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,11 +5,11 @@ jobs:
       - uses: actions/checkout@v2.3.1
       - run: dotnet build
 
-  # test:
-  #   runs-on: ubuntu-20.04
-  #   steps:
-  #     - uses: actions/checkout@v2.3.1
-  #     - run: dotnet test -p:CollectCoverage=true
+  test:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2.3.1
+      - run: dotnet test 
 
 name: cibuild
 on: push
