--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,5 +11,18 @@ jobs:
       - uses: actions/checkout@v2.3.1
       - run: dotnet test -p:CollectCoverage=true /p:CoverletOutputFormat=opencover 
 
+  analyze:
+    needs: [build, test]
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2.3.1
+      - run: dotnet tool install --global dotnet-sonarscanner
+      - run: |
+          dotnet sonarscanner begin -o:'cvchavez2' -k:'cvchavez2_revature-csharp-challenge' -d:sonar.login='853311e530df2a0ffeee81fdbe7feaa93459c632' -d:sonar.host.url="https://sonarcloud.io"
+          dotnet build
+          dotnet test -p:CollectCoverage=true -p:CoverletOutputFormat=opencover --logger trx
+          dotnet sonarscanner end -d:sonar.login='853311e530df2a0ffeee81fdbe7feaa93459c632'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
 name: cibuild
 on: push
